{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 149,
  "lineage": "5d820b18-b74b-22fa-be8f-8f3ef9364d20",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "jenkins_master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01ed456b595d50876",
            "arn": "arn:aws:ec2:us-east-1:381492260180:elastic-ip/eipalloc-01ed456b595d50876",
            "association_id": "eipassoc-022abb078a912a3fd",
            "domain": "vpc",
            "id": "eipalloc-01ed456b595d50876",
            "instance": "i-0fa0c46ddb8472fe0",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0e643a2795492475f",
            "private_dns": "ip-10-0-0-252.ec2.internal",
            "private_ip": "10.0.0.252",
            "public_dns": "ec2-52-207-198-244.compute-1.amazonaws.com",
            "public_ip": "52.207.198.244",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Environment": "production",
              "Name": "devops-challenge-jenkins-master-eip"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "devops-challenge-jenkins-master-eip"
            }
          },
          "dependencies": [
            "aws_instance.jenkins_master",
            "aws_security_group.jenkins",
            "aws_subnet.public",
            "data.aws_ami.amazon_linux_2023"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b6a2d0a8beb5197b",
            "arn": "arn:aws:ec2:us-east-1:381492260180:elastic-ip/eipalloc-0b6a2d0a8beb5197b",
            "association_id": "eipassoc-0b73d736dd1ee0b22",
            "domain": "vpc",
            "id": "eipalloc-0b6a2d0a8beb5197b",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0654ce80bdc0f2817",
            "private_dns": "ip-10-0-0-105.ec2.internal",
            "private_ip": "10.0.0.105",
            "public_dns": "ec2-54-225-185-102.compute-1.amazonaws.com",
            "public_ip": "54.225.185.102",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Environment": "production",
              "Name": "devops-challenge-nat-eip"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "devops-challenge-nat-eip"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins_master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0724302e25d16f8f2",
            "arn": "arn:aws:ec2:us-east-1:381492260180:instance/i-0fa0c46ddb8472fe0",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fa0c46ddb8472fe0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "devops-key-new",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e643a2795492475f",
            "private_dns": "ip-10-0-0-252.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.252",
            "public_dns": "ec2-107-22-139-209.compute-1.amazonaws.com",
            "public_ip": "107.22.139.209",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:381492260180:key/90560c61-330d-4647-bba2-9eaca906a048",
                "throughput": 125,
                "volume_id": "vol-01a42b812ca5a0b84",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08beec5eec04ef8f4",
            "tags": {
              "Environment": "production",
              "Name": "Jenkins Master",
              "Project": "devops-challenge"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "Jenkins Master",
              "Project": "devops-challenge"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08bb35d4a6b5d7d52"
            ]
          },
          "dependencies": [
            "aws_security_group.jenkins",
            "aws_subnet.public",
            "data.aws_ami.amazon_linux_2023"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492260180:internet-gateway/igw-0f3d53fb91d34981b",
            "id": "igw-0f3d53fb91d34981b",
            "owner_id": "381492260180",
            "region": "us-east-1",
            "tags": {
              "Environment": "production",
              "Name": "devops-challenge-igw"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "devops-challenge-igw"
            },
            "vpc_id": "vpc-09327d2bb50473b2c"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:381492260180:loadbalancer/app/devops-challenge-alb/b1042582619ce661",
            "arn_suffix": "app/devops-challenge-alb/b1042582619ce661",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "devops-challenge-alb-312401820.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:381492260180:loadbalancer/app/devops-challenge-alb/b1042582619ce661",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "devops-challenge-alb",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-088e6cdfd929225e3"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0547ee6a64ab521db"
              },
              {
                "subnet_id": "subnet-08beec5eec04ef8f4"
              }
            ],
            "subnets": [
              "subnet-0547ee6a64ab521db",
              "subnet-08beec5eec04ef8f4"
            ],
            "tags": {
              "Environment": "production",
              "Name": "devops-challenge-alb"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "devops-challenge-alb"
            },
            "vpc_id": "vpc-09327d2bb50473b2c",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:381492260180:listener/app/devops-challenge-alb/b1042582619ce661/763e6b79b62c6e42",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:381492260180:targetgroup/devops-challenge-frontend-tg/0fa88c26af69e765",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:381492260180:listener/app/devops-challenge-alb/b1042582619ce661/763e6b79b62c6e42",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:381492260180:loadbalancer/app/devops-challenge-alb/b1042582619ce661",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.main",
            "aws_lb_target_group.frontend",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:381492260180:targetgroup/devops-challenge-backend-tg/c1b730a5e2f15f36",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:381492260180:listener-rule/app/devops-challenge-alb/b1042582619ce661/763e6b79b62c6e42/7eae3b27e71f9af8",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:381492260180:listener-rule/app/devops-challenge-alb/b1042582619ce661/763e6b79b62c6e42/7eae3b27e71f9af8",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:381492260180:listener/app/devops-challenge-alb/b1042582619ce661/763e6b79b62c6e42",
            "priority": 100,
            "region": "us-east-1",
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.main",
            "aws_lb_listener.frontend",
            "aws_lb_target_group.backend",
            "aws_lb_target_group.frontend",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:381492260180:targetgroup/devops-challenge-backend-tg/c1b730a5e2f15f36",
            "arn_suffix": "targetgroup/devops-challenge-backend-tg/c1b730a5e2f15f36",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:381492260180:targetgroup/devops-challenge-backend-tg/c1b730a5e2f15f36",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:381492260180:loadbalancer/app/devops-challenge-alb/b1042582619ce661"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "devops-challenge-backend-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "production",
              "Name": "devops-challenge-backend-tg"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "devops-challenge-backend-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-09327d2bb50473b2c"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:381492260180:targetgroup/devops-challenge-frontend-tg/0fa88c26af69e765",
            "arn_suffix": "targetgroup/devops-challenge-frontend-tg/0fa88c26af69e765",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:381492260180:targetgroup/devops-challenge-frontend-tg/0fa88c26af69e765",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:381492260180:loadbalancer/app/devops-challenge-alb/b1042582619ce661"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "devops-challenge-frontend-tg",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "production",
              "Name": "devops-challenge-frontend-tg"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "devops-challenge-frontend-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-09327d2bb50473b2c"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b6a2d0a8beb5197b",
            "association_id": "eipassoc-0b73d736dd1ee0b22",
            "connectivity_type": "public",
            "id": "nat-0e51088ccd354ada5",
            "network_interface_id": "eni-0654ce80bdc0f2817",
            "private_ip": "10.0.0.105",
            "public_ip": "54.225.185.102",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-08beec5eec04ef8f4",
            "tags": {
              "Environment": "production",
              "Name": "devops-challenge-nat-gateway"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "devops-challenge-nat-gateway"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492260180:route-table/rtb-0a9700884cefee59a",
            "id": "rtb-0a9700884cefee59a",
            "owner_id": "381492260180",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e51088ccd354ada5",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "production",
              "Name": "devops-challenge-private-rt"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "devops-challenge-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-09327d2bb50473b2c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492260180:route-table/rtb-050b45b9c68677ef4",
            "id": "rtb-050b45b9c68677ef4",
            "owner_id": "381492260180",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f3d53fb91d34981b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "production",
              "Name": "devops-challenge-public-rt"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "devops-challenge-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-09327d2bb50473b2c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ea7e9df9df729e49",
            "region": "us-east-1",
            "route_table_id": "rtb-0a9700884cefee59a",
            "subnet_id": "subnet-05ecdff5070f0e0ba"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0132758824dfd4db2",
            "region": "us-east-1",
            "route_table_id": "rtb-0a9700884cefee59a",
            "subnet_id": "subnet-0711b329ac42c9e8f"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02e2a1e13876c1179",
            "region": "us-east-1",
            "route_table_id": "rtb-050b45b9c68677ef4",
            "subnet_id": "subnet-08beec5eec04ef8f4"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02e2afaeb59b6f282",
            "region": "us-east-1",
            "route_table_id": "rtb-050b45b9c68677ef4",
            "subnet_id": "subnet-0547ee6a64ab521db"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492260180:security-group/sg-088e6cdfd929225e3",
            "description": "Security group for Application Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-088e6cdfd929225e3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "devops-challenge-alb-sg",
            "name_prefix": "",
            "owner_id": "381492260180",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "devops-challenge-alb-sg"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "devops-challenge-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-09327d2bb50473b2c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492260180:security-group/sg-01037ebadabfed680",
            "description": "Security group for backend ECS tasks",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01037ebadabfed680",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP from ALB",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-088e6cdfd929225e3"
                ],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [],
                "description": "HTTP from frontend",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b82deba0dcc537b8"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "devops-challenge-backend-sg",
            "name_prefix": "",
            "owner_id": "381492260180",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "devops-challenge-backend-sg"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "devops-challenge-backend-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-09327d2bb50473b2c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.frontend",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492260180:security-group/sg-0b82deba0dcc537b8",
            "description": "Security group for frontend ECS tasks",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b82deba0dcc537b8",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP from ALB",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-088e6cdfd929225e3"
                ],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "devops-challenge-frontend-sg",
            "name_prefix": "",
            "owner_id": "381492260180",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "devops-challenge-frontend-sg"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "devops-challenge-frontend-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-09327d2bb50473b2c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492260180:security-group/sg-08bb35d4a6b5d7d52",
            "description": "Security group for Jenkins server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08bb35d4a6b5d7d52",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Jenkins Web UI",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from anywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "devops-challenge-jenkins-sg",
            "name_prefix": "",
            "owner_id": "381492260180",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "devops-challenge-jenkins-sg"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "devops-challenge-jenkins-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-09327d2bb50473b2c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492260180:subnet/subnet-05ecdff5070f0e0ba",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05ecdff5070f0e0ba",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "381492260180",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "production",
              "Name": "devops-challenge-private-subnet-1"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "devops-challenge-private-subnet-1"
            },
            "vpc_id": "vpc-09327d2bb50473b2c"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492260180:subnet/subnet-0711b329ac42c9e8f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0711b329ac42c9e8f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "381492260180",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "production",
              "Name": "devops-challenge-private-subnet-2"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "devops-challenge-private-subnet-2"
            },
            "vpc_id": "vpc-09327d2bb50473b2c"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492260180:subnet/subnet-08beec5eec04ef8f4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08beec5eec04ef8f4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "381492260180",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "production",
              "Name": "devops-challenge-public-subnet-1"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "devops-challenge-public-subnet-1"
            },
            "vpc_id": "vpc-09327d2bb50473b2c"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492260180:subnet/subnet-0547ee6a64ab521db",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0547ee6a64ab521db",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "381492260180",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "production",
              "Name": "devops-challenge-public-subnet-2"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "devops-challenge-public-subnet-2"
            },
            "vpc_id": "vpc-09327d2bb50473b2c"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492260180:vpc/vpc-09327d2bb50473b2c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d84ec49155a35ddb",
            "default_route_table_id": "rtb-07c21d2cf65397332",
            "default_security_group_id": "sg-03f1bd4477b5024a6",
            "dhcp_options_id": "dopt-081f37e4ff720573e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09327d2bb50473b2c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07c21d2cf65397332",
            "owner_id": "381492260180",
            "region": "us-east-1",
            "tags": {
              "Environment": "production",
              "Name": "devops-challenge-vpc"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "devops-challenge-vpc"
            }
          }
        }
      ]
    }
  ]
}